--- a/init.x3.rc
+++ b/init.x3.rc
@@ -199,10 +199,6 @@ on boot
     write /sys/block/mmcblk0/queue/read_ahead_kb 2048
     write /sys/block/mmcblk1/queue/read_ahead_kb 2048
 
-#LGE_CHANGE_S 20121126, hwansuk.kang@lge.com [data] TCP increase rmem_max value for downlink data throughput
-    write /proc/sys/net/core/rmem_max 393213
-#LGE_CHANGE_E 20121126, hwansuk.kang@lge.com [data] TCP increase rmem_max value for downlink data throughput
-
 #LGE_CHANGE_S 20120720, hwansuk.kang@lge.com [data] Disable IPv6 for mobile network
     write /proc/sys/net/ipv6/conf/rmnet0/disable_ipv6 1
     write /proc/sys/net/ipv6/conf/rmnet1/disable_ipv6 1
@@ -381,16 +377,23 @@ on post-fs-data
     mkdir /data/lgdrm 0770 system media
     setprop vold.post_fs_data_done 1
 
-    # Set buffer sizes from stock (lower readmax) 
-    setprop net.tcp.buffersize.default 4096,87380,393216,4096,16384,110208
-    setprop net.tcp.buffersize.wifi    524288,1048576,2097152,262144,524288,1048576
-    setprop net.tcp.buffersize.lte     524288,1048576,2097152,262144,524288,1048576
-    setprop net.tcp.buffersize.umts    4094,87380,393216,4096,16384,110208
-    setprop net.tcp.buffersize.hspa    4094,87380,393216,4096,16384,110208
-    setprop net.tcp.buffersize.hsupa   4094,87380,393216,4096,16384,110208
-    setprop net.tcp.buffersize.hsdpa   4094,87380,393216,4096,16384,110208
-    setprop net.tcp.buffersize.edge    4093,26280,35040,4096,16384,35040
-    setprop net.tcp.buffersize.gprs    4092,8760,11680,4096,8760,11680
+#LGE_CHANGE_S, minjeon.kim@lge.com 2012-06-29 for performance
+# Define TCP buffer sizes for various networks
+#   ReadMin, ReadInitial, ReadMax, WriteMin, WriteInitial, WriteMax,
+    setprop net.tcp.buffersize.default 8096,87380,110208,4096,16384,110208
+    setprop net.tcp.buffersize.lte     8096,140625,3461120,4096,140625,3461120
+    setprop net.tcp.buffersize.umts    8096,140625,3461120,4096,140625,3461120
+    setprop net.tcp.buffersize.hspa    8096,140625,3461120,4096,140625,3461120
+    setprop net.tcp.buffersize.hsupa   8096,140625,3461120,4096,140625,3461120
+    setprop net.tcp.buffersize.hsdpa   8096,140625,3461120,4096,140625,3461120
+    setprop net.tcp.buffersize.hspap   8096,140625,3461120,4096,140625,3461120
+    setprop net.tcp.buffersize.edge    8096,87380,110208,4096,16384,35040
+    setprop net.tcp.buffersize.gprs    8096,87380,110208,4096,8760,11680
+# Assign TCP buffer thresholds to be ceiling value of technology maximums
+# Increased technology maximums should be reflected here.
+    write /proc/sys/net/core/rmem_max  3461120
+    write /proc/sys/net/core/wmem_max  3461120
+#LGE_CHANGE_E, minjeon.kim@lge.com 2012-06-29 for performance
 
 # Hardware tunable perms
     chown root system /sys/devices/platform/spi_tegra.4/spi4.2/gamma_tuning
