--- a/init.x3.rc
+++ b/init.x3.rc
@@ -49,6 +49,8 @@ on fs
     write /data/misc/wifi/firmware_path ""
     chmod 0666 /data/misc/wifi/firmware_path
 
+    setprop ro.crypto.fuse_sdcard true
+
 on boot
     insmod /system/lib/modules/bthid.ko
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
@@ -284,7 +286,7 @@ service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
 service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
     class late_start
 
-service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard1 /storage/sdcard1
+service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw/sdcard1 /storage/sdcard1
     class late_start
     disabled
 
